[tool.poetry]
name = "traces"
version  = "0.6.4"
description = "A Python library for unevenly-spaced time series analysis"
authors = ["Mike Stringer <mike.stringer.internet@gmail.com>"]
repository = "https://github.com/stringertheory/traces"
documentation = "https://stringertheory.github.io/traces/"
readme = "README.md"
packages = [
  {include = "traces"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
sortedcontainers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
pre-commit = [
    {version = "^3.4.0", python = ">=3.9"},
    {version = "^2.20.0", python = ">=3.7,<3.9"}
]
tox = "^4.11.1"
numpy = [
    {version = "^1.26.3", python = ">=3.9"},
    {version = "^1.19.5", python = ">=3.7,<3.9"}
]
pandas = [
    {version = "^2.2.0", python = ">=3.9"},
    {version = "^1.3.5", python = ">=3.7,<3.9"}
]
scipy = [
    {version = "^1.12.0", python = ">=3.9"},
    {version = "^1.7.2", python = ">=3.7,<3.9"}
]
matplotlib = [
    {version = "^3.8.2", python = ">=3.9"},
    {version = "^3.5", python = ">=3.7,<3.9"}
]
pytest-mpl = "^0.16.1"
pyarrow = "^15.0.0"
bump-my-version = "^0.17.3"
notebook = "^7.0.7"
deptry = "^0.12.0"
python-dateutil = "^2.8.2"
mkautodoc = "^0.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = "^0.23.0"
sphinx = [
    {version = "^7.2.6", python = ">=3.9"},
    {version = "^6.0", python = ">=3.8,<3.9"},
]
sphinx-autobuild = "^2021.3.14"
recommonmark = "^0.7.1"

[tool.bumpversion]
current_version = "0.6.4"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "traces/__init__.py"

[[tool.bumpversion.files]]
filename = "docs/conf.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["traces"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 80
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Non-cryptographic random usage
    "S311",
    # Class attribute shadowing a Python builtin
    "A003",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["traces"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401"]
